--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -18,6 +18,7 @@ body{
 nav{
     display: flex;
     justify-content: space-between;
+    margin: 0 200px;
 }
 .nav titel{
     color: black;
@@ -36,3 +37,10 @@ nav a{
     text-decoration: none;
     color: #474747;
 }
+/* header related style*/
+.header{
+    background-color: #FFF8F3;
+}
+    .banner{
+        padding: 30px 30px 30px 150px;
+    }
