--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -14,6 +14,18 @@ body{
     font-weight: 700;
     padding: 15px 35px;
 }
+.section title{
+    color: #181818;
+font-size: 35px;
+font-family: Open Sans;
+font-weight: 700;
+}
+.section-discription{
+    color: #757575;
+font-size: 18px;
+font-weight: 400;
+line-height: 30px;
+}
 /* nav releted style*/
 nav{
     display: flex;
@@ -26,7 +38,7 @@ nav{
     font-weight: 800;
 }
 nav > ul{
-    display: flex;
+    display:flex;
     align-items: center;
 }
 nav li{
@@ -39,13 +51,43 @@ nav a{
 }
 /* header related style*/
 .header{
-    background-color: #FFF8F3;
+    background-color: #fff8ff;
+    background-image: url('../images/header_bg.png');
+    background-repeat:no-repeat;
+    background-position: bottom right;
 }
     .banner{
-        padding: 30px 30px 30px 150px;
+        padding: 30px 30px 0px 150px;
         display: flex;
-        align-items: center;
+        align-items:center;
+        justify-content: space-between;
+    }
+    .banner content{
+        max-width: 500px;
     }
     .banner .profile picture{
         width: 500px;
+        margin: 0;
+        padding: o;
     }
+    .banner-greeting{
+        font-size: 45px;
+        color: #474747;
+        margin bottom: 0;
+    }
+    . .banner title{
+        font-size: 85px;
+        font-family: Open Sans;
+        font-weight: 700;
+        margin-top: 5px;
+        margin-bottom: 20px;
+    }
+    /* main section style*/
+
+    /* about section style*/
+     .about{
+        padding: 130px;
+        border-radius: 10px;
+        background-color: #fff8ff;
+        margin: 130px 0;
+     }
